# game-of-15

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mysquare.cpp  mysquare.h  plansza.cpp  plansza.h  przesuwanka.pro
